apps/convertx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convertx
  template:
    metadata:
      labels:
        app: convertx
    spec:
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: 250Mi
              cpu: 10m
            limits:
              memory: 250Mi
          volumeMounts:
            - name: database
              mountPath: /app/data
      volumes:
        - name: database
          emptyDir: {}
