apps/convertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - host: convert.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convertx
                port:
                  name: http
  tls:
    - hosts:
        - convert.nasus.dev
      secretName: convertx-tls
